--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="Content-Type-Script" content="text/javascript" />
-    <meta name="Content-Type-Style" content="text/css" />
-    <title>Dummy</title>
-
-    <!-- <link rel="stylesheet" type="text/css" href="media/css/style.css" /> -->
+  <head> 
+    <%- partial('partial/meta'); %>
+    <title>Dummy</title> 
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
   <body>
     <%- body %>
