--- a/source/css/partial/_variables.styl
+++ b/source/css/partial/_variables.styl
@@ -1,6 +1,28 @@
 
-$background-color = #2B2B2B
-$background-color2 = #0E190E
+$font-default = 1.16em 'ShareTechMono'
+$font-small = 0.85em 'ShareTechMono'
 
-$text-color = #34D4CC
+$font-bigtitle = 1.85em 'VT323'
+$font-smalltitle = 1em 'VT323'
+$font-bigtitle-lg = 2.8em 'VT323'
+$font-smalltitle-lg = 1.85em 'VT323'
+$font-bigtitle-md = 2em 'VT323'
+$font-smalltitle-md = 1.24em 'VT323'
 
+
+$background-color = #1F1C20
+$background-color2 = #2B2B2B
+$background-content = #0E190E
+
+
+// Text color for the Site Title and other BIG headings...
+$text-color-sitetitle = #BBCEE3
+
+// Most common text color
+$text-color-default = #E6E6EB
+
+// Used for dates and small sub-headings
+$text-color-default2 = #D2D0DB
+
+// Edges and keywords
+$text-color-highlight = #CFC1B6
