Minor additions to the CSS.

--- a/source/css/partial/_base.styl
+++ b/source/css/partial/_base.styl
@@ -28,7 +28,11 @@ body
   font $font-smalltitle
   color $text-color-default2
 
-grid
+.post-list-title
+  font $font-post-list-title
+  border-bottom 1px solid $text-color-highlight  
+
+.grid
   display flex
   flex-flow row wrap
   align-content flex-start
