--- a/source/css/partial/_variables.styl
+++ b/source/css/partial/_variables.styl
@@ -2,6 +2,8 @@
 $font-default = 1.16em 'ShareTechMono'
 $font-small = 0.85em 'ShareTechMono'
 
+$font-post-list-title = 1.16em 'VT323'
+
 $font-bigtitle = 1.85em 'VT323'
 $font-smalltitle = 1em 'VT323'
 $font-bigtitle-lg = 2.8em 'VT323'
