--- a/source/css/partial/_containers.styl
+++ b/source/css/partial/_containers.styl
@@ -13,3 +13,13 @@
     left 25%
     width 50%
     border-bottom: 1px solid $background-color
+
+
+.term-box
+  width 100%
+  margin-top 0.4em
+  background $background-color2
+  border 1px solid $text-color-highlight
+
+.content
+  padding 0.85em
