--- a/layout/partial/header_big.ejs
+++ b/layout/partial/header_big.ejs
@@ -1,12 +1,14 @@
-<div class="header-big"> 
-  <% if (page.title) { %>
-    <div class="centered-text site-title">
-      <%- page.title %>
-    </div>
-  <% } else { %>
-    <div class="centered-text site-title">
-      <%- config.title %>
-    </div>
-    <div class="centered-text site-subtitle"><%- config.subtitle %></div>
-  <% } %> 
+<div class="header-big">
+  <div>
+    <% if (page.title) { %>
+      <div class="centered-text site-title">
+        <%- page.title %>
+      </div>
+    <% } else { %>
+      <div class="centered-text site-title">
+        <%- config.title %>
+      </div>
+      <div class="centered-text site-subtitle"><%- config.subtitle %></div>
+    <% } %>
+  </div> 
 </div>
