--- a/source/css/partial/_variables.styl
+++ b/source/css/partial/_variables.styl
@@ -1,4 +1,6 @@
 
+@import "partial/_colors.styl"
+
 $font-default = 1.16em 'ShareTechMono'
 $font-small = 0.85em 'ShareTechMono'
 
@@ -12,19 +14,10 @@ $font-bigtitle-md = 2.44em 'VT323'
 $font-smalltitle-md = 1.62em 'VT323'
 
 
-$background-color = #1F1C20
-$background-color2 = #2B2B2B
-$background-content = #0E190E
-
-
-// Text color for the Site Title and other BIG headings...
-$text-color-sitetitle = #BBCEE3
+// Text color for Site/Post/Page titles and subtitles
+$text-color-title = $color-light
+$text-color-subtitle = $color-mid
 
 // Most common text color
-$text-color-default = #E6E6EB
+$text-color-default = $color-bright
 
-// Used for dates and small sub-headings
-$text-color-default2 = #D2D0DB
-
-// Edges and keywords
-$text-color-highlight = #CFC1B6
