--- a/source/css/partial/_containers.styl
+++ b/source/css/partial/_containers.styl
@@ -1,4 +1,18 @@
 
+.navbar
+  position fixed
+  width 100%
+  height 48px
+  left 0
+  top 0
+  z-index 999
+
+.navbar .navshade
+  background alpha($color-terminal, 0.5)
+  border-left 1px solid $color-term-border
+  border-right 1px solid $color-term-border
+  border-bottom 1px solid $color-term-border
+
 
 .header-big
   display flex
@@ -7,23 +21,23 @@
   width 100%
   height 200px
   position relative
-  background $background-color
-  border-bottom 1px solid $text-color-highlight
+  background $color-dark
+  border-bottom 1px solid $color-term-border
   &:after
     content ''
     position absolute
     bottom -1px
     left 25%
     width 50%
-    border-bottom: 1px solid $background-color
+    border-bottom: 1px solid $color-dark
 
 
 .term-box
   display flex
   width 100%
   margin-top 0.4em
-  background $background-content
-  border 1px solid $text-color-highlight
+  background $color-terminal
+  border 1px solid $color-term-border
 
 .term-box .term-box-thumb
   width 180px
