Added new navbar. Tweaked other layouts.

--- a/layout/partial/header_big.ejs
+++ b/layout/partial/header_big.ejs
@@ -1,14 +1,14 @@
 <div class="header-big">
   <div>
     <% if (page.title) { %>
-      <div class="centered-text site-title">
+      <div class="full-width text-align-center site-title">
         <%- page.title %>
       </div>
     <% } else { %>
-      <div class="centered-text site-title">
+      <div class="full-width text-align-center site-title">
         <%- config.title %>
       </div>
-      <div class="centered-text site-subtitle"><%- config.subtitle %></div>
+      <div class="full-width text-align-center site-subtitle"><%- config.subtitle %></div>
     <% } %>
   </div> 
 </div>
