--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -1,3 +1,4 @@
+<%- partial('partial/navbar'); %>
 <div class="grid">
   <div class="cell-md-1 cell-lg-2"></div>
   <div class="cell-sm-12 cell-md-10 cell-lg-8">
