--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -7,6 +7,7 @@
       : <%- page.title %>
     <% } %>
     </title>
+    <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
   <body>
