--- a/layout/partial/navbar.ejs
+++ b/layout/partial/navbar.ejs
@@ -12,7 +12,14 @@
           </div>
         </div>
         <div class="cell-sm-6 text-align-right">
-          Items
+          <div class="nav-menu">
+            <ul>
+              <li><a href="#">Test 1</a></li>
+              <li><a href="#">Test 2</a></li>
+              <li><a href="#">Test 3</a></li>
+              <li><a href="#">Test 4</a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
