--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -8,7 +8,7 @@
     <% } %>
     </title>
     <% theme.css.forEach(function(path){ %>
-      <link rel="stylesheet" type="text/css" href="<%- path %>" />
+      <link rel="stylesheet" type="text/css" href="<%- url_for(path) %>" />
       <% }); %>
   </head>
   <body>
