--- a/source/css/partial/_base.styl
+++ b/source/css/partial/_base.styl
@@ -21,6 +21,7 @@ a
 
 @import "partial/_containers.styl"
 @import "partial/_navmenu.styl"
+@import "partial/_posts.styl"
 
 .full-width
   width 100%
@@ -41,16 +42,12 @@ a
 
 .nav-title
   font $font-smalltitle
-  color $color-mid
+  color $text-color-title
   padding 0.2em 0em 0.2em 0.2em
   & a
     color inherit
     &:hover
       color inherit
-
-.post-list-title
-  font $font-post-list-title
-  border-bottom 1px solid $color-term-border
 
 .grid
   display flex
