Missed a file for last commit.

--- a/source/css/partial/_containers.styl
+++ b/source/css/partial/_containers.styl
@@ -43,6 +43,7 @@
   width 180px
   height 180px
   display inline-block
+  border-right 1px solid $color-term-border
   & img
     width inherit
     height inherit
