--- a/source/css/partial/_variables.styl
+++ b/source/css/partial/_variables.styl
@@ -1,17 +1,25 @@
 
 @import "partial/_colors.styl"
 
-$font-default = 1.16em 'ShareTechMono'
-$font-small = 0.85em 'ShareTechMono'
+$font-title = 'VT323'
+$font-text = 'ShareTechMono'
 
-$font-post-list-title = 1.16em 'VT323'
+$font-title-size-sm = 2.4em
+$font-title-size-md = 2.6em
+$font-title-size-lg = 2.8em
 
-$font-bigtitle = 2.18em 'VT323'
-$font-smalltitle = 1.32em 'VT323'
-$font-bigtitle-lg = 2.8em 'VT323'
-$font-smalltitle-lg = 1.85em 'VT323'
-$font-bigtitle-md = 2.44em 'VT323'
-$font-smalltitle-md = 1.62em 'VT323'
+$font-subtitle-size-sm = 1.36em
+$font-subtitle-size-md = 1.48em
+$font-subtitle-size-lg = 1.74em
+
+$font-heading-size-sm = 1.08em
+$font-heading-size-md = 1.2em
+$font-heading-size-lg = 1.36em
+
+$font-text-size-lg = 1.2em
+$font-text-size-md = 1em
+$font-text-size-sm = 0.8em
+
 
 
 // Text color for Site/Post/Page titles and subtitles
