Attempting to tweak font sizing. Experimenting with px-based measurements

--- a/source/css/partial/_variables.styl
+++ b/source/css/partial/_variables.styl
@@ -4,6 +4,7 @@
 $font-title = 'VT323'
 $font-text = 'ShareTechMono'
 
+/*
 $font-title-size-sm = 2.4em
 $font-title-size-md = 2.6em
 $font-title-size-lg = 2.8em
@@ -19,7 +20,23 @@ $font-heading-size-lg = 1.36em
 $font-text-size-lg = 1.2em
 $font-text-size-md = 1em
 $font-text-size-sm = 0.8em
+*/
 
+$font-title-size-sm = 48px
+$font-title-size-md = 64px
+$font-title-size-lg = 80px
+
+$font-subtitle-size-sm = 18px
+$font-subtitle-size-md = 24px
+$font-subtitle-size-lg = 28px
+
+$font-heading-size-sm = 16px
+$font-heading-size-md = 20px
+$font-heading-size-lg = 24px
+
+$font-text-size-lg = 18px
+$font-text-size-md = 16px
+$font-text-size-sm = 14px
 
 
 // Text color for Site/Post/Page titles and subtitles
