Moved .nav-title into the _navmenu file. Other misc tweaks

--- a/source/css/partial/_containers.styl
+++ b/source/css/partial/_containers.styl
@@ -12,6 +12,7 @@
   border-left 1px solid $color-term-border
   border-right 1px solid $color-term-border
   border-bottom 1px solid $color-term-border
+  padding 4px 4px
 
 
 .header-big
