--- a/source/css/partial/_base.styl
+++ b/source/css/partial/_base.styl
@@ -1,5 +1,8 @@
+*, *:before, *:after
+  box-sizing: border-box;
 
 html
+  line-height 1.15
   height 100%
   background-repeat no-repeat
   background-attachment fixed
@@ -39,15 +42,6 @@ a
 .site-subtitle
   font $font-subtitle-size-sm $font-text
   color $text-color-subtitle
-
-.nav-title
-  font $font-smalltitle
-  color $text-color-title
-  padding 0.2em 0em 0.2em 0.2em
-  & a
-    color inherit
-    &:hover
-      color inherit
 
 .grid
   display flex
