--- a/source/css/partial/_containers.styl
+++ b/source/css/partial/_containers.styl
@@ -40,6 +40,8 @@
   background $color-terminal
   border 1px solid $color-term-border
 
+// Term-box-thumb improvements based on answer found...
+// https://stackoverflow.com/questions/19192892/css-how-can-i-set-image-size-relative-to-parent-height
 .term-box .term-box-thumb
   position relative
   width 112px
