Lots of small CSS tweaks.

--- a/layout/partial/post_preview.ejs
+++ b/layout/partial/post_preview.ejs
@@ -1,4 +1,4 @@
-<div class="term-box">
+<div class="term-box term-chained">
 
   <a class="term-box-thumb" href="<%- url_for(post.path) %>">
     <% if (post.thumbnail){ %>
