--- a/source/css/partial/_base.styl
+++ b/source/css/partial/_base.styl
@@ -4,10 +4,10 @@
 html
   line-height 1.15
   height 100%
+  background-image linear-gradient($color-dark, $color-dark2)
   background-repeat no-repeat
   background-attachment fixed
-  background $color-dark
-  background-image linear-gradient($color-dark, $color-dark2)
+  background $color-dark 
 
 
 body
@@ -28,6 +28,9 @@ a
 
 .full-width
   width 100%
+
+.page-head
+  margin-top $navbar-height + 8px
 
 .text-align-right
   text-align right
