--- a/source/css/partial/_variables.styl
+++ b/source/css/partial/_variables.styl
@@ -38,6 +38,8 @@ $font-text-size-lg = 18px
 $font-text-size-md = 16px
 $font-text-size-sm = 14px
 
+// Variable(s) for the navbar.
+$navbar-height = 48px
 
 // Text color for Site/Post/Page titles and subtitles
 $text-color-title = $color-light
