--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -1,8 +1,13 @@
 <%- partial('partial/navbar'); %>
 <%- partial('partial/header_big'); %>
 
+<div class="hidden-md-lg">
+  This is a Med to Large Test!!
+</div>
 <div class="grid">
-  <div class="cell-md-3 cell-lg-4"></div>
+  <div class="cell-md-3 cell-lg-4 hidden-sm">
+    <div>This is a test</div>
+  </div>
   <div class="cell-sm-12 cell-md-9 cell-lg-8">
     <% if(page.posts.length > 0){ %>
       <% page.posts.each(function(post){ %>
