Lots of style addition to build out and clean up the post.ejs

--- a/source/css/partial/_base.styl
+++ b/source/css/partial/_base.styl
@@ -37,10 +37,27 @@ a
 
 .text-align-center
   text-align center
+  
+.content
+  padding $content-padding-general
+
+.content-left
+  padding-left $content-padding-left
+.content-right
+  padding-right $content-padding-right
+.content-top
+  padding-top $content-padding-top
+.content-bottom
+  padding-bottom $content-padding-bottom
+.content-vertical
+  padding-top $content-padding-top
+  padding-bottom $content-padding-bottom
+.content-horizontal
+  padding-left $content-padding-left
+  padding-right $content-padding-right
 
 .hidden
   display none
-
 
 .site-title
   font $font-title-size-sm $font-title
