--- a/source/css/partial/_containers.styl
+++ b/source/css/partial/_containers.styl
@@ -33,6 +33,8 @@
     border-bottom: 1px solid $color-dark
 
 
+generate-decoration-bottom(10, 50, 100)
+
 .term-box
   display flex
   width 100%
@@ -58,9 +60,6 @@
     min-width 100%
     min-height 100%
     transform translate(-50%, -50%)
-
-.content
-  padding 0.85em
 
 
 @media only screen and (min-width: 768px)
