--- a/source/css/partial/_variables.styl
+++ b/source/css/partial/_variables.styl
@@ -38,6 +38,15 @@ $font-text-size-lg = 18px
 $font-text-size-md = 16px
 $font-text-size-sm = 14px
 
+// Content padding values.
+// NOTE: I'm aware they're all the same value, but this allows me to tweak
+// individual sides without having to change the actual style definitions
+$content-padding-top =  0.85em
+$content-padding-bottom = $content-padding-top
+$content-padding-left = $content-padding-top
+$content-padding-right = $content-padding-top
+$content-padding-general = $content-padding-top
+
 // Variable(s) for the navbar.
 $navbar-height = 48px
 
