--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -1,8 +1,26 @@
 <%- partial('partial/navbar'); %>
 <article class="page-head">
   <div class=term-box">
-    <div class="content">
-      <%- page.content %>
+    <div>
+      <div class="decoration-bottom-90">
+        <div class="content-left">
+          <h2 class="post-title"><%- page.title %></h2>
+        </div>
+      </div>
+      <div class="decoration-bottom-75">
+        <div class="content-left content-vertical">
+          <h3 class="post-date">
+            <% if (page.updated.unix() !== page.date.unix()){ %>
+              Updated: <i><%- date(page.updated, config.date_format) %></i>
+            <% } else { %>
+              Posted: <i><%- date(page.date, config.date_format) %></i>
+            <% } %>
+          </h3>
+        </div>
+      </div>
+      <div class="content"> 
+        <%- page.content %>
+      </div>
     </div>
   </div>
 </article>
