--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -7,6 +7,11 @@
       : <%- page.title %>
     <% } %>
     </title>
+    <% if (theme.rcss){ %>
+      <% theme.rcss.forEach(function(item){ %>
+        <link rel="stylesheet" type="text/css" href="<%- item.url %>" <% if (item.integrity){ %> integrity:"<%- item.integrity %>"<% } %>>
+      <% }); %>
+    <% } %>
     <% theme.css.forEach(function(path){ %>
       <link rel="stylesheet" type="text/css" href="<%- url_for(path) %>" />
       <% }); %>
