--- a/layout/partial/navbar.ejs
+++ b/layout/partial/navbar.ejs
@@ -13,7 +13,14 @@
             <div class="nav-menu">
               <ul>
                 <% theme.navmenu.forEach(function(item){ %>
-                  <li><a href="<%- url_for(item.url) %>"><%- item.name %></a></li>
+                  <li> 
+                    <a href="<%- url_for(item.url) %>">
+                      <% if (item.fa_icon){ %>
+                        <i class="fa fa-<%- item.fa_icon %>"></i>
+                      <% } %>
+                      <span class="hidden-sm"><%- item.name %></span>
+                    </a>
+                  </li>
                 <% }); %>
               </ul>
             </div>
