--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -3,13 +3,13 @@
   <div class=term-box">
     <div>
       <div style="display: flex">
-        <a class="term-box-post-thumb hidden-sm" href="<%- url_for(page.path) %>">
+        <div class="term-box-post-thumb hidden-sm">
           <% if (page.thumbnail){ %>
             <%- image_tag(url_for(page.thumbnail)) %>
           <% } else { %>
             <%- image_tag(url_for("images/default_post_bg.png")) %>
           <% } %>
-        </a>
+        </div>
         <div class="post-heading">
           <div class="decoration-bottom-90">
             <div class="content-left">
