Removed some comments.

--- a/source/css/partial/_highlight.styl
+++ b/source/css/partial/_highlight.styl
@@ -5,12 +5,12 @@ $highlight-background = $color-dark2
 $highlight-current-line = $color-dark
 $highlight-selection = #d6d6d6
 $highlight-foreground = $color-bright
-$highlight-comment = #928779 //!
-$highlight-red = #cf5c36 //!
-$highlight-orange = #f7ce5b //!
-$highlight-yellow = #f2ed6f //!
-$highlight-green = #a5b452 //!
-$highlight-aqua = #b4d2ba //!
+$highlight-comment = #928779
+$highlight-red = #cf5c36
+$highlight-orange = #f7ce5b
+$highlight-yellow = #f2ed6f
+$highlight-green = #a5b452
+$highlight-aqua = #b4d2ba
 $highlight-blue = #7a9aac
 $highlight-purple = #8a84a6
 $highlight-grey = #777
