--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -2,11 +2,11 @@
 <%- partial('partial/header_big'); %>
 
 <div class="hidden-md-lg">
-  Hi! 
+  <%- partial('partial/author'); %>
 </div>
 <div class="grid">
   <div class="cell-md-3 cell-lg-4 hidden-sm">
-    <%- partial('partial/socials'); %>
+    <%- partial('partial/author'); %>
   </div>
   <div class="cell-sm-12 cell-md-9 cell-lg-8">
     <% if(page.posts.length > 0){ %>
