--- a/source/css/partial/_containers.styl
+++ b/source/css/partial/_containers.styl
@@ -62,6 +62,25 @@ generate-decoration-bottom(10, 50, 100)
     transform translate(-50%, -50%)
 
 
+.author-box
+  margin-top 10px
+  margin-right 8px
+  padding 0 10px
+  & .author-img
+    text-align center
+  & .author-info
+    text-align justify
+    text-justify inter-word
+  & .key
+    font-family $font-title
+    font-weight 900
+
+img.rounded
+  height 150px
+  width 150px
+  border-radius 50%
+  object-fit cover
+
 @media only screen and (min-width: 768px)
   .term-box .term-box-thumb
     width 120px 
