--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -14,7 +14,9 @@
     <% } %>
     <% theme.css.forEach(function(path){ %>
       <link rel="stylesheet" type="text/css" href="<%- url_for(path) %>" />
-      <% }); %>
+    <% }); %>
+
+    <script src="<%- url_for("js/renderloop.js") %>" type="text/javascript"></script>
   </head>
   <body> 
     <div class="grid">
@@ -24,4 +26,8 @@
       </div>
     </div>
   </body>
+
+  <script>
+    RenderLoop.start();
+  </script>
 </html>
