--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -17,7 +17,9 @@
     <% }); %>
 
     <script src="<%- url_for("js/renderloop.js") %>" type="text/javascript"></script>
+    <% if (theme.technoflies){ %>
     <script src="<%- url_for("js/technoflies.js") %>" type="text/javascript"></script>
+    <% } %>
   </head>
   <body> 
     <div class="grid">
@@ -29,8 +31,16 @@
   </body>
 
   <script>
-    TechnoFlies.setCanvas("header-canvas", true);
-    TechnoFlies.start();
+    <% if (theme.technoflies){ %>
+      TechnoFlies
+        .setCanvas("header-canvas", true)
+        .setBoxSize(<%- theme.technoflies.boxSize %>)
+        .setBoxSpacing(<%- theme.technoflies.boxSpacing %>)
+        .setBoxColor(<%- theme.technoflies.boxColor.r %>,<%- theme.technoflies.boxColor.g %>,<%- theme.technoflies.boxColor.b %>)
+        .setEdgeColor(<%- theme.technoflies.edgeColor.r %>,<%- theme.technoflies.edgeColor.g %>,<%- theme.technoflies.edgeColor.b %>)
+        .setGlowColor(<%- theme.technoflies.glowColor.r %>,<%- theme.technoflies.glowColor.g %>,<%- theme.technoflies.glowColor.b %>)
+        .start();
+    <% } %>
     RenderLoop.start();
   </script>
 </html>
